flere features og mere html

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@ and open the template in the editor.
         <div>
             <table>
                 <ul>
-                    <li><a href="online.html">Online users</a></li> 
-                    <li><a href="log.html">See Log</a></li> 
+                    <li><a href="OnlineUsers">Online users</a></li> 
+                    <li><a href="log">See Log</a></li> 
             </ul>
             </table>
             
